--- a/index.html
+++ b/index.html
@@ -79,6 +79,11 @@
               .bar {
                 fill: #D27899;
               }
+              .grid line {
+                  stroke: #EAE8E9;
+                  stroke-opacity: 0.7;
+                  shape-rendering: crispEdges;
+                }
             </style>
         <script>
           // set the dimensions and margins of the graph
@@ -100,6 +105,13 @@
               .append("g")
               .attr("transform",
                     "translate(" + margin.left + "," + margin.top + ")");
+
+                    // gridlines in y axis function
+          function make_y_gridlines() {
+              return d3.axisLeft(y)
+                  .ticks(8)
+          }
+
           // get the data
           d3.csv("data1.csv").then(function(data) {
             console.log(data);
@@ -119,6 +131,13 @@
               .attr("width", x.bandwidth())
               .attr("y", function(d) { return y(d.Saturday); })
               .attr("height", function(d) { return height - y(d.Saturday); });
+            // add the Y gridlines
+            svg.append("g")
+                .attr("class", "grid")
+                .call(make_y_gridlines()
+                    .tickSize(-width)
+                    .tickFormat(""))
+
             // add the x Axis
             svg.append("g")
               .attr("transform", "translate(0," + height + ")")
@@ -142,10 +161,12 @@
                .text("Number of Records");
              // text label for the x axis
              svg.append("text")
-               .attr("transform","translate(" + (width/2) + " ," + (margin.top/24) + ")")
+               .attr("transform","translate(" + (width/2) + " ," + (margin.top-35) + ")")
                .style("text-anchor", "middle")
                .text("Saturday");
-             });
+
+              });
+
         </script>
       </div>
     </section>
@@ -161,6 +182,11 @@
                 stroke: #A0E9EC;
                 stroke-width: 4px;
               }
+              .grid line {
+                  stroke: #EAE8E9;
+                  stroke-opacity: 0.7;
+                  shape-rendering: crispEdges;
+                }
           </style>
       </script>
       <script>
@@ -186,6 +212,12 @@
             .attr("height", height3 + margin3.top3 + margin3.bottom3)
             .append("g")
             .attr("transform","translate(" + margin3.left3 + "," + margin3.top3 + ")");
+
+            // gridlines in y axis function
+          function make_y_gridlines() {
+              return d3.axisLeft(y)
+                  .ticks(7)
+          }
 
           // Get the data
           d3.csv("data2.csv").then(function(data3) {
@@ -216,7 +248,7 @@
               .call(d3.axisLeft(y3));
 
           svg3.append("text")
-              .attr("transform","translate(" + (width3/2) + " ," + (margin3.top3-40) + ")")
+              .attr("transform","translate(" + (width3/2) + " ," + (margin3.top3-65) + ")")
               .style("text-anchor", "front")
               .text("Incident Time");
 
@@ -234,6 +266,13 @@
               .style("text-anchor", "middle")
               .text("Number of Records");
 
+              // add the Y gridlines
+          svg3.append("g")
+              .attr("class", "grid")
+              .call(make_y_gridlines()
+                  .tickSize(-width3)
+                  .tickFormat(""))
+
           });
 
       </script>
@@ -248,6 +287,11 @@
           <style>
             .bar2 {
               fill: #E0C6FF;
+            }
+            .grid line {
+                stroke: #EAE8E9;
+                stroke-opacity: 0.7;
+                shape-rendering: crispEdges;
             }
           </style>
       </script>
@@ -282,7 +326,6 @@
             .append("g")
             .attr("transform","translate(" + margin2.left2 + "," + margin2.top2 + ")");
 
-
           // Scale the range of the data in the domains
           x2.domain([0, d3.max(data2, function(d2){ return d2.records; })])
           y2.domain(data2.map(function(d2) { return d2.crime; }));
@@ -295,6 +338,12 @@
               .attr("width", function(d2) {return x2(d2.records); } )
               .attr("y", function(d2) { return y2(d2.crime); })
               .attr("height", y2.bandwidth());
+
+          // gridlines in x axis function
+          function make_x_gridlines() {
+              return d3.axisBottom(x2)
+                  .ticks(15)
+          }
 
           // add the x Axis
           svg2.append("g")
@@ -330,6 +379,14 @@
               .attr("transform","translate(" + (width2/2-43) + " ," + (margin2.bottom2+410) + ")")
               .style("text-anchor", "front")
               .text("Number of Records");
+
+          // add the X gridlines
+          svg2.append("g")
+              .attr("class", "grid")
+              .attr("transform", "translate(0," + height2 + ")")
+              .call(make_x_gridlines()
+                  .tickSize(-height2)
+                  .tickFormat(""))
         </script>
       </div>
   </section>
