--- a/index.html
+++ b/index.html
@@ -419,7 +419,7 @@
       <h3>Credit</h3>
 
       <p>
-        If appropriate, provide credit for the dataset, any code used, and design inspirations here. Unsufficient discussion here is a violation of the <a href="/syllabus.html#cheating-policy">academic honesty policy</a> and may result in an F grade for the assignment or the <em>entire</em> course.
+        Inspirtaion from and credit to Scott Murray and d3noob.
       </p>
     </div>
   </section>
