--- a/index.html
+++ b/index.html
@@ -419,7 +419,7 @@
       <h3>Credit</h3>
 
       <p>
-        Inspirtaion from and credit to Scott Murray and d3noob.
+        Inspiration from and credit to Scott Murray and d3noob.
       </p>
     </div>
   </section>
